<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">

    <Button
            android:layout_width="180dp"
            android:layout_height="0dp"
            android:text="@string/RollD4"
            android:id="@+id/button"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:enabled="true"
            android:layout_weight="0.11"/>

    <Button
            android:layout_width="180dp"
            android:layout_height="0dp"
            android:text="@string/RollD6"
            android:id="@+id/button2"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.11"/>

    <Button
            android:layout_width="180dp"
            android:layout_height="0dp"
            android:text="@string/RollD8"
            android:id="@+id/button3"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.11"/>

    <Button
            android:layout_width="180dp"
            android:layout_height="0dp"
            android:text="@string/RollD10"
            android:id="@+id/button4"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.11"/>

    <Button
            android:layout_width="180dp"
            android:layout_height="0dp"
            android:text="@string/RollD100"
            android:id="@+id/button5"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.11"/>

    <Button
            android:layout_width="180dp"
            android:layout_height="0dp"
            android:text="@string/RollD12"
            android:id="@+id/button6"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.11"/>

    <Button
            android:layout_width="180dp"
            android:layout_height="0dp"
            android:text="@string/RollD20"
            android:id="@+id/button7"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.11"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:text="@string/MainMenu"
            android:id="@+id/button8"
            android:layout_weight="0.11"/>
</LinearLayout>