<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/RollD4"
            android:id="@+id/button"
            android:layout_margin="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:enabled="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>

    <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/RollD6"
            android:id="@+id/button2"
            android:layout_margin="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/button"/>

    <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/RollD8"
            android:id="@+id/button3"
            android:layout_margin="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/button2"/>

    <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/RollD10"
            android:id="@+id/button4"
            android:layout_margin="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/button3"/>

    <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/RollD100"
            android:id="@+id/button5"
            android:layout_margin="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/button4"/>

    <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/RollD12"
            android:id="@+id/button6"
            android:layout_margin="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/button5"/>

    <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/RollD20"
            android:id="@+id/button7"
            android:layout_margin="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/button6"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/MainMenu"
            android:id="@+id/button8"
            android:layout_alignParentBottom="true"/>

    <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_toRightOf="@+id/button"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/button"
            android:layout_alignTop="@+id/button"
            android:textIsSelectable="false"
            android:textSize="26sp"
            android:singleLine="true"
            android:phoneNumber="false"
            android:password="false"
            android:numeric="integer"
            android:gravity="center|fill_horizontal|fill_vertical"/>
    <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_toRightOf="@+id/button2"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/button2"
            android:layout_alignTop="@+id/button2"
            android:textSize="26sp"
            android:singleLine="true"
            android:phoneNumber="false"
            android:password="false"
            android:numeric="integer"
            android:gravity="center|fill_horizontal|fill_vertical"/>
    <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_toRightOf="@+id/button3"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/button3"
            android:layout_alignTop="@+id/button3"
            android:textSize="26sp"
            android:singleLine="true"
            android:phoneNumber="false"
            android:password="false"
            android:numeric="integer"
            android:gravity="center|fill_horizontal|fill_vertical"/>
    <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_toRightOf="@+id/button4"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/button4"
            android:layout_alignTop="@+id/button4"
            android:textSize="26sp"
            android:singleLine="true"
            android:phoneNumber="false"
            android:password="false"
            android:numeric="integer"
            android:gravity="center|fill_horizontal|fill_vertical"/>
    <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_toRightOf="@+id/button5"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/button5"
            android:layout_alignTop="@+id/button5"
            android:textSize="26sp"
            android:singleLine="true"
            android:phoneNumber="false"
            android:password="false"
            android:numeric="integer"
            android:gravity="center|fill_horizontal|fill_vertical"/>
    <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_toRightOf="@+id/button6"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/button6"
            android:layout_alignTop="@+id/button6"
            android:textSize="26sp"
            android:singleLine="true"
            android:phoneNumber="false"
            android:password="false"
            android:numeric="integer"
            android:gravity="center|fill_horizontal|fill_vertical"/>
    <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:layout_toRightOf="@+id/button7"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/button7"
            android:layout_alignTop="@+id/button7"
            android:textSize="26sp"
            android:singleLine="true"
            android:phoneNumber="false"
            android:password="false"
            android:numeric="integer"
            android:gravity="center|fill_horizontal|fill_vertical"/>


</RelativeLayout>